-Updates sbt and plugins -Adds jvm options to run tests on JDK 17